FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20100524:
AUTHOR: alepulver@FreeBSD.org

  * The license support files (bsd.licenses.mk and bsd.licenses.db.mk) from
    GSoc 2008/2009 have been committed. A new PH entry will be available
    soon, but for the moment look at:
    http://wiki.freebsd.org/PortsLicenseInfrastructure
    Or, alternatively, the comments at the beginning of the mentioned files.

20090906:
AUTHOR: flz@FreeBSD.org

  * There is now a unified way to create users and groups
    in your ports. First, make sure they are added to both
    ports/GIDs and ports/UIDs, then add the following in
    your port:

    USERS=	foo
    GROUPS=	foo

    ... if you want your port to create the foo user and
    group.

20090812:
AUTHOR: portmgr@FreeBSD.org

  * sourceforge.net has changed their URL layout to be more
    flexible for their users.  A new bsd.sites.mk macro SFP
    has been added for projects that moved from
    http://${mirror}/sourceforge/%SUBDIR%/
    to
    http://${mirror}/project/%SUBDIR%/
    Note that %SUBDIR% is now highly individual for each
    project and might need changing as well.

20090521:
AUTHOR: portmgr@FreeBSD.org

  * bsd.port.options.mk is now clear to be widely used.

20090516:
AUTHOR: pgollucci@FreeBSD.org

  * APACHE_COMPAT is dead!

  * USE_APACHE=yes is dead!

  * WITH_APACHE13, WITH_APACHE2, WITH_APACHE20, and WITH_APACHE22 are dead

    You should set USE_APACHE=13|20|22+.  WITH_APACHE option can
    be used to conditional include support for ANY version of
    Apache based on APACHE_PORT.  Currently www/apache13

20090207:
AUTHOR: pgollucci@FreeBSD.org

  * devel/libslang dropped in favor of devel/libslang2
